[package]
name = "simple_window"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27"
egui_sdl2_renderer = { path = "../../" }
egui_sdl2_platform = "0.3"
winapi = { version = "0.3", features = ["winuser"] }

[dependencies.sdl2]
version = "0.37"
default-features = false
features = ["image", "mixer", "ttf"]
